# PifagorIDE

./: CMakeLists.txt  Highlighter.cpp  Highlighter.h  README.md  Resource.qrc  TroublesWithLib  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h  redactormainwindow.cpp  redactormainwindow.h  redactormainwindow.ui  textform.cpp  textform.h  textform.ui
QTTranslator/: ArgScaner.cpp  ArgScaner.h  ArgTranslator.cpp  ArgTranslator.h  Atom.cpp  Atom.h  AtomFishka.cpp  AtomFishka.h  Block.cpp  Block.h  Exeption.cpp  Exeption.h  Expression.cpp  Expression.h  Fishka.cpp  Fishka.h  Function.cpp  Function.h  GeneralObject.cpp  GeneralObject.h  Identifier.cpp  Identifier.h  Interface.cpp  Interface.h  Interpretator.cpp  Interpretator.h  KeyWord.cpp  KeyWord.h  List.cpp  List.h  ListFishka.cpp  ListFishka.h  ObjectFishka.cpp  ObjectFishka.h  Precompiled.cpp  Precompiled.h  Program.cpp  Program.h  Scaner.cpp  Scaner.h  (+11 more)
